# AgentSpec

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DESCRIPTION.md  MARKETING_PLAN.md  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml
.agentcontract/runs/: runs_2026-04-09.jsonl
.agentspec/runs/: runs_2026-05-16.jsonl
.github/actions/agentspec/: action.yml
.github/workflows/: ci.yml
agentcontract/: __init__.py  cli.py  contract.py  exceptions.py  interceptor.py  pytest_plugin.py  result.py  snapshot.py  storage.py
agentcontract/adapters/: __init__.py  anthropic.py  base.py  langchain.py  openai.py
agentcontract/assertions/: arg_assertions.py  call_assertions.py  count_assertions.py  order_assertions.py
agentcontract/chaos/: __init__.py  injector.py
agentspec/: __init__.py  cli.py  contract.py  exceptions.py  interceptor.py  pytest_plugin.py  result.py  snapshot.py  storage.py
agentspec/adapters/: __init__.py  anthropic.py  base.py  langchain.py  openai.py
agentspec/assertions/: __init__.py  arg_assertions.py  call_assertions.py  count_assertions.py  order_assertions.py
agentspec/chaos/: __init__.py  injector.py
dashboard/src/: App.jsx  index.css
docs/: contributing.md  getting-started.md  index.html  index.md  quickstart.md  roadmap.md  security.md
docs/guides/: chaos-testing.md  ci-integration.md  custom-adapters.md  langchain-langgraph.md  multi-agent.md  snapshots.md  writing-contracts.md
examples/: anthropic_example.py  chaos_example.py  langchain_adapter_example.py  langchain_example.py  langgraph_adapter_example.py  multi_agent_example.py  openai_example.py  quickstart.py  test_contract_demos.py
examples/.agentcontract/runs/: runs_2026-04-09.jsonl
site/: 404.html  index.html  objects.inv  sitemap.xml  styles.css
site/contributing/: index.html
site/getting-started/: index.html
site/guides/chaos-testing/: index.html
site/guides/ci-integration/: index.html
site/guides/custom-adapters/: index.html
site/guides/langchain-langgraph/: index.html
site/guides/multi-agent/: index.html
site/guides/snapshots/: index.html
site/guides/writing-contracts/: index.html
site/quickstart/: index.html
site/roadmap/: index.html
site/search/: search_index.json
site/security/: index.html
tests/: conftest.py  test_assertions.py  test_async.py  test_chaos.py  test_chaos_injector.py  test_contract.py  test_ecosystem.py  test_integration.py  test_multi_agent.py  test_performance.py  test_snapshot.py
