[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcontract"
version = "0.3.0"
description = "Deterministic testing framework for AI agents"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "AgentContract Contributors"}
]
keywords = [
    "ai",
    "agent",
    "testing",
    "contract",
    "pytest",
    "llm",
    "tool-calls",
    "snapshot",
    "chaos-engineering"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Pytest",
]

dependencies = [
    "pytest>=7.0",
    "rich>=13.0",
    "click>=8.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=23.0",
]
all = [
    "openai>=1.0",
    "anthropic>=0.18",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]

[project.scripts]
agentcontract = "agentcontract.cli:cli"

[project.entry-points."pytest11"]
agentcontract = "agentcontract.pytest_plugin"

[project.urls]
Homepage = "https://github.com/agentcontract/agentcontract"
Repository = "https://github.com/agentcontract/agentcontract"
Documentation = "https://github.com/agentcontract/agentcontract/blob/main/docs/getting-started.md"
Issues = "https://github.com/agentcontract/agentcontract/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentcontract"]

[tool.hatch.build.targets.wheel.force-include]
"dashboard/dist" = "agentcontract/ui_dist"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "contract: marks tests as agent contract tests",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
