[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcontract"
version = "0.3.0"
description = "AgentSpec: Deterministic testing framework for AI agents"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "AgentContract Contributors"}
]
keywords = [
    "ai-agents",
    "testing",
    "langchain",
    "langgraph",
    "llm",
    "contracts"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Pytest",
]

dependencies = [
    "pytest>=7.0",
    "rich>=13.0",
    "click>=8.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=23.0",
]
all = [
    "openai>=1.0",
    "anthropic>=0.18",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]

[project.scripts]
agentspec = "agentspec.cli:cli"
agentcontract = "agentspec.cli:cli"

[project.entry-points."pytest11"]
"agentspec.pytest_plugin" = "agentspec.pytest_plugin"

[project.urls]
Homepage = "https://agentspec.dev"
Repository = "https://github.com/Anudeepsrib/AgentSpec"
Documentation = "https://agentspec.dev/docs"

[tool.hatch.build.targets.wheel]
packages = ["agentspec", "agentcontract"]

[tool.hatch.build.targets.wheel.force-include]
"dashboard/dist" = "agentspec/ui_dist"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "contract: marks tests as agent contract tests",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"examples/*" = ["D", "E701"]
"agentspec/exceptions.py" = ["N818", "D105"]
"agentcontract/__init__.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
